feat: update project for recent dependencies